--- a/IEX Stock Fetcher.ipynb
+++ b/IEX Stock Fetcher.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -91,85 +91,85 @@
        "      <td>0.00</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>0.0000</td>\n",
-       "      <td>233.55</td>\n",
-       "      <td>232.94</td>\n",
+       "      <td>232.57</td>\n",
+       "      <td>233.01</td>\n",
        "      <td>Sep 30</td>\n",
-       "      <td>221.48</td>\n",
-       "      <td>224.00</td>\n",
-       "      <td>228.49</td>\n",
-       "      <td>226.79</td>\n",
-       "      <td>229.87</td>\n",
-       "      <td>221.00</td>\n",
-       "      <td>26324314</td>\n",
-       "      <td>26990686</td>\n",
+       "      <td>230.73</td>\n",
+       "      <td>222.40</td>\n",
+       "      <td>228.30</td>\n",
+       "      <td>229.41</td>\n",
+       "      <td>221.60</td>\n",
+       "      <td>227.30</td>\n",
+       "      <td>27560717</td>\n",
+       "      <td>27356318</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2019-10-01</th>\n",
        "      <td>0.64</td>\n",
-       "      <td>0.002867</td>\n",
-       "      <td>0.2789</td>\n",
-       "      <td>231.94</td>\n",
-       "      <td>236.72</td>\n",
+       "      <td>0.002815</td>\n",
+       "      <td>0.2826</td>\n",
+       "      <td>226.01</td>\n",
+       "      <td>233.05</td>\n",
        "      <td>Oct 1</td>\n",
-       "      <td>231.30</td>\n",
-       "      <td>226.46</td>\n",
-       "      <td>226.77</td>\n",
-       "      <td>237.37</td>\n",
-       "      <td>232.20</td>\n",
-       "      <td>228.45</td>\n",
-       "      <td>37300050</td>\n",
-       "      <td>37740641</td>\n",
+       "      <td>229.60</td>\n",
+       "      <td>232.19</td>\n",
+       "      <td>232.83</td>\n",
+       "      <td>237.84</td>\n",
+       "      <td>228.60</td>\n",
+       "      <td>230.65</td>\n",
+       "      <td>37151742</td>\n",
+       "      <td>37308230</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2019-10-02</th>\n",
-       "      <td>-5.70</td>\n",
-       "      <td>-0.022807</td>\n",
-       "      <td>-2.6285</td>\n",
-       "      <td>223.67</td>\n",
-       "      <td>231.00</td>\n",
+       "      <td>-5.75</td>\n",
+       "      <td>-0.022611</td>\n",
+       "      <td>-2.5684</td>\n",
+       "      <td>227.78</td>\n",
+       "      <td>229.09</td>\n",
        "      <td>Oct 2</td>\n",
-       "      <td>226.87</td>\n",
-       "      <td>223.61</td>\n",
-       "      <td>219.79</td>\n",
-       "      <td>233.90</td>\n",
-       "      <td>222.10</td>\n",
-       "      <td>233.27</td>\n",
-       "      <td>37190954</td>\n",
-       "      <td>36897959</td>\n",
+       "      <td>228.07</td>\n",
+       "      <td>232.78</td>\n",
+       "      <td>229.49</td>\n",
+       "      <td>233.52</td>\n",
+       "      <td>218.58</td>\n",
+       "      <td>226.00</td>\n",
+       "      <td>37445848</td>\n",
+       "      <td>36370828</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2019-10-03</th>\n",
-       "      <td>1.95</td>\n",
-       "      <td>-0.014448</td>\n",
-       "      <td>0.8510</td>\n",
-       "      <td>229.09</td>\n",
-       "      <td>224.64</td>\n",
+       "      <td>1.94</td>\n",
+       "      <td>-0.014334</td>\n",
+       "      <td>0.8574</td>\n",
+       "      <td>231.74</td>\n",
+       "      <td>225.67</td>\n",
        "      <td>Oct 3</td>\n",
-       "      <td>223.64</td>\n",
-       "      <td>222.83</td>\n",
-       "      <td>228.46</td>\n",
-       "      <td>224.76</td>\n",
-       "      <td>222.09</td>\n",
-       "      <td>220.24</td>\n",
-       "      <td>31829034</td>\n",
-       "      <td>31639591</td>\n",
+       "      <td>217.92</td>\n",
+       "      <td>221.74</td>\n",
+       "      <td>231.50</td>\n",
+       "      <td>225.57</td>\n",
+       "      <td>224.30</td>\n",
+       "      <td>222.75</td>\n",
+       "      <td>31557655</td>\n",
+       "      <td>30834853</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2019-10-04</th>\n",
-       "      <td>6.22</td>\n",
-       "      <td>0.014130</td>\n",
-       "      <td>2.8757</td>\n",
-       "      <td>230.11</td>\n",
-       "      <td>232.69</td>\n",
+       "      <td>6.46</td>\n",
+       "      <td>0.014193</td>\n",
+       "      <td>2.8351</td>\n",
+       "      <td>230.52</td>\n",
+       "      <td>234.07</td>\n",
        "      <td>Oct 4</td>\n",
-       "      <td>229.78</td>\n",
-       "      <td>235.12</td>\n",
-       "      <td>236.55</td>\n",
-       "      <td>227.84</td>\n",
-       "      <td>228.39</td>\n",
-       "      <td>231.80</td>\n",
-       "      <td>36212147</td>\n",
-       "      <td>35343376</td>\n",
+       "      <td>225.19</td>\n",
+       "      <td>228.58</td>\n",
+       "      <td>237.81</td>\n",
+       "      <td>237.88</td>\n",
+       "      <td>226.40</td>\n",
+       "      <td>227.52</td>\n",
+       "      <td>35754280</td>\n",
+       "      <td>34896043</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -178,29 +178,30 @@
       "text/plain": [
        "            change  changeOverTime  changePercent   close    high   label  \\\n",
        "date                                                                        \n",
-       "2019-09-30    0.00        0.000000         0.0000  233.55  232.94  Sep 30   \n",
-       "2019-10-01    0.64        0.002867         0.2789  231.94  236.72   Oct 1   \n",
-       "2019-10-02   -5.70       -0.022807        -2.6285  223.67  231.00   Oct 2   \n",
-       "2019-10-03    1.95       -0.014448         0.8510  229.09  224.64   Oct 3   \n",
-       "2019-10-04    6.22        0.014130         2.8757  230.11  232.69   Oct 4   \n",
+       "2019-09-30    0.00        0.000000         0.0000  232.57  233.01  Sep 30   \n",
+       "2019-10-01    0.64        0.002815         0.2826  226.01  233.05   Oct 1   \n",
+       "2019-10-02   -5.75       -0.022611        -2.5684  227.78  229.09   Oct 2   \n",
+       "2019-10-03    1.94       -0.014334         0.8574  231.74  225.67   Oct 3   \n",
+       "2019-10-04    6.46        0.014193         2.8351  230.52  234.07   Oct 4   \n",
        "\n",
        "               low    open  uClose   uHigh    uLow   uOpen   uVolume    volume  \n",
        "date                                                                            \n",
-       "2019-09-30  221.48  224.00  228.49  226.79  229.87  221.00  26324314  26990686  \n",
-       "2019-10-01  231.30  226.46  226.77  237.37  232.20  228.45  37300050  37740641  \n",
-       "2019-10-02  226.87  223.61  219.79  233.90  222.10  233.27  37190954  36897959  \n",
-       "2019-10-03  223.64  222.83  228.46  224.76  222.09  220.24  31829034  31639591  \n",
-       "2019-10-04  229.78  235.12  236.55  227.84  228.39  231.80  36212147  35343376  "
+       "2019-09-30  230.73  222.40  228.30  229.41  221.60  227.30  27560717  27356318  \n",
+       "2019-10-01  229.60  232.19  232.83  237.84  228.60  230.65  37151742  37308230  \n",
+       "2019-10-02  228.07  232.78  229.49  233.52  218.58  226.00  37445848  36370828  \n",
+       "2019-10-03  217.92  221.74  231.50  225.57  224.30  222.75  31557655  30834853  \n",
+       "2019-10-04  225.19  228.58  237.81  237.88  226.40  227.52  35754280  34896043  "
       ]
      },
-     "execution_count": 49,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "import iex\n",
-    "iex.init('Tpk_8dad7c6b1806466dbb3c1b3c07fa5be1', api='sandbox')\n",
+    "import key\n",
+    "iex.init(key.test_token, api='sandbox')\n",
     "aapl = iex.Stock('AAPL')\n",
     "aapl.chart('5d')"
    ]
@@ -228,8 +229,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# iex.init('pk_xxx', api='cloud')\n",
-    "iex.init('Tpk_8dad7c6b1806466dbb3c1b3c07fa5be1', api='sandbox')\n",
+    "iex.init(key.test_token, api='sandbox')\n",
+    "# iex.init(key.token, api='cloud')\n",
     "for k in spy:\n",
     "    # todo read csv and add needed range\n",
     "    iex.Stock(k).chart('1y').to_csv(\"./daily/{}.csv\".format(k))"
