--- a/IEX Stock Fetcher.ipynb
+++ b/IEX Stock Fetcher.ipynb
@@ -14,7 +14,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# IEX Stock Fetcher\n",
+    "# Simple IEX Stock Fetcher\n",
     "\n",
     "The IEX free message quota only gets one year of data for 200 stocks, so run this, fetcher stock data and save to disk every month.\n"
    ]
@@ -91,85 +91,85 @@
        "      <td>0.00</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>0.0000</td>\n",
-       "      <td>232.57</td>\n",
-       "      <td>233.01</td>\n",
+       "      <td>230.20</td>\n",
+       "      <td>230.09</td>\n",
        "      <td>Sep 30</td>\n",
-       "      <td>230.73</td>\n",
-       "      <td>222.40</td>\n",
-       "      <td>228.30</td>\n",
-       "      <td>229.41</td>\n",
-       "      <td>221.60</td>\n",
-       "      <td>227.30</td>\n",
-       "      <td>27560717</td>\n",
-       "      <td>27356318</td>\n",
+       "      <td>229.47</td>\n",
+       "      <td>226.80</td>\n",
+       "      <td>228.40</td>\n",
+       "      <td>227.92</td>\n",
+       "      <td>228.85</td>\n",
+       "      <td>229.90</td>\n",
+       "      <td>26841490</td>\n",
+       "      <td>27506584</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2019-10-01</th>\n",
-       "      <td>0.64</td>\n",
-       "      <td>0.002815</td>\n",
-       "      <td>0.2826</td>\n",
-       "      <td>226.01</td>\n",
-       "      <td>233.05</td>\n",
+       "      <td>0.62</td>\n",
+       "      <td>0.002852</td>\n",
+       "      <td>0.2858</td>\n",
+       "      <td>234.56</td>\n",
+       "      <td>228.73</td>\n",
        "      <td>Oct 1</td>\n",
-       "      <td>229.60</td>\n",
-       "      <td>232.19</td>\n",
-       "      <td>232.83</td>\n",
-       "      <td>237.84</td>\n",
-       "      <td>228.60</td>\n",
-       "      <td>230.65</td>\n",
-       "      <td>37151742</td>\n",
-       "      <td>37308230</td>\n",
+       "      <td>234.70</td>\n",
+       "      <td>226.03</td>\n",
+       "      <td>226.30</td>\n",
+       "      <td>237.90</td>\n",
+       "      <td>230.50</td>\n",
+       "      <td>235.12</td>\n",
+       "      <td>37691578</td>\n",
+       "      <td>37906031</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2019-10-02</th>\n",
-       "      <td>-5.75</td>\n",
-       "      <td>-0.022611</td>\n",
-       "      <td>-2.5684</td>\n",
-       "      <td>227.78</td>\n",
-       "      <td>229.09</td>\n",
+       "      <td>-5.68</td>\n",
+       "      <td>-0.022798</td>\n",
+       "      <td>-2.6024</td>\n",
+       "      <td>219.46</td>\n",
+       "      <td>229.68</td>\n",
        "      <td>Oct 2</td>\n",
-       "      <td>228.07</td>\n",
-       "      <td>232.78</td>\n",
-       "      <td>229.49</td>\n",
-       "      <td>233.52</td>\n",
-       "      <td>218.58</td>\n",
-       "      <td>226.00</td>\n",
-       "      <td>37445848</td>\n",
-       "      <td>36370828</td>\n",
+       "      <td>227.08</td>\n",
+       "      <td>223.94</td>\n",
+       "      <td>219.07</td>\n",
+       "      <td>234.70</td>\n",
+       "      <td>223.84</td>\n",
+       "      <td>234.00</td>\n",
+       "      <td>36483928</td>\n",
+       "      <td>36859828</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2019-10-03</th>\n",
-       "      <td>1.94</td>\n",
-       "      <td>-0.014334</td>\n",
-       "      <td>0.8574</td>\n",
-       "      <td>231.74</td>\n",
-       "      <td>225.67</td>\n",
+       "      <td>1.87</td>\n",
+       "      <td>-0.014374</td>\n",
+       "      <td>0.8615</td>\n",
+       "      <td>221.36</td>\n",
+       "      <td>228.88</td>\n",
        "      <td>Oct 3</td>\n",
-       "      <td>217.92</td>\n",
-       "      <td>221.74</td>\n",
-       "      <td>231.50</td>\n",
-       "      <td>225.57</td>\n",
-       "      <td>224.30</td>\n",
-       "      <td>222.75</td>\n",
-       "      <td>31557655</td>\n",
-       "      <td>30834853</td>\n",
+       "      <td>224.74</td>\n",
+       "      <td>226.18</td>\n",
+       "      <td>230.40</td>\n",
+       "      <td>230.14</td>\n",
+       "      <td>217.64</td>\n",
+       "      <td>228.59</td>\n",
+       "      <td>31658842</td>\n",
+       "      <td>30946087</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2019-10-04</th>\n",
-       "      <td>6.46</td>\n",
-       "      <td>0.014193</td>\n",
-       "      <td>2.8351</td>\n",
-       "      <td>230.52</td>\n",
-       "      <td>234.07</td>\n",
+       "      <td>6.26</td>\n",
+       "      <td>0.013779</td>\n",
+       "      <td>2.8933</td>\n",
+       "      <td>236.36</td>\n",
+       "      <td>234.80</td>\n",
        "      <td>Oct 4</td>\n",
-       "      <td>225.19</td>\n",
-       "      <td>228.58</td>\n",
-       "      <td>237.81</td>\n",
-       "      <td>237.88</td>\n",
-       "      <td>226.40</td>\n",
-       "      <td>227.52</td>\n",
-       "      <td>35754280</td>\n",
-       "      <td>34896043</td>\n",
+       "      <td>225.47</td>\n",
+       "      <td>233.62</td>\n",
+       "      <td>229.12</td>\n",
+       "      <td>230.83</td>\n",
+       "      <td>227.00</td>\n",
+       "      <td>229.15</td>\n",
+       "      <td>35594415</td>\n",
+       "      <td>35560415</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -178,19 +178,19 @@
       "text/plain": [
        "            change  changeOverTime  changePercent   close    high   label  \\\n",
        "date                                                                        \n",
-       "2019-09-30    0.00        0.000000         0.0000  232.57  233.01  Sep 30   \n",
-       "2019-10-01    0.64        0.002815         0.2826  226.01  233.05   Oct 1   \n",
-       "2019-10-02   -5.75       -0.022611        -2.5684  227.78  229.09   Oct 2   \n",
-       "2019-10-03    1.94       -0.014334         0.8574  231.74  225.67   Oct 3   \n",
-       "2019-10-04    6.46        0.014193         2.8351  230.52  234.07   Oct 4   \n",
+       "2019-09-30    0.00        0.000000         0.0000  230.20  230.09  Sep 30   \n",
+       "2019-10-01    0.62        0.002852         0.2858  234.56  228.73   Oct 1   \n",
+       "2019-10-02   -5.68       -0.022798        -2.6024  219.46  229.68   Oct 2   \n",
+       "2019-10-03    1.87       -0.014374         0.8615  221.36  228.88   Oct 3   \n",
+       "2019-10-04    6.26        0.013779         2.8933  236.36  234.80   Oct 4   \n",
        "\n",
        "               low    open  uClose   uHigh    uLow   uOpen   uVolume    volume  \n",
        "date                                                                            \n",
-       "2019-09-30  230.73  222.40  228.30  229.41  221.60  227.30  27560717  27356318  \n",
-       "2019-10-01  229.60  232.19  232.83  237.84  228.60  230.65  37151742  37308230  \n",
-       "2019-10-02  228.07  232.78  229.49  233.52  218.58  226.00  37445848  36370828  \n",
-       "2019-10-03  217.92  221.74  231.50  225.57  224.30  222.75  31557655  30834853  \n",
-       "2019-10-04  225.19  228.58  237.81  237.88  226.40  227.52  35754280  34896043  "
+       "2019-09-30  229.47  226.80  228.40  227.92  228.85  229.90  26841490  27506584  \n",
+       "2019-10-01  234.70  226.03  226.30  237.90  230.50  235.12  37691578  37906031  \n",
+       "2019-10-02  227.08  223.94  219.07  234.70  223.84  234.00  36483928  36859828  \n",
+       "2019-10-03  224.74  226.18  230.40  230.14  217.64  228.59  31658842  30946087  \n",
+       "2019-10-04  225.47  233.62  229.12  230.83  227.00  229.15  35594415  35560415  "
       ]
      },
      "execution_count": 2,
@@ -210,17 +210,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Fetche SPY stocks"
+    "## Fetcher SPY stocks"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "spy = [x for x in pd.read_html('https://etfdailynews.com/etf/spy/', attrs={'id': 'etfs-that-own'})[0].Symbol.values.tolist() if isinstance(x, str)]"
+    "spy = [x for x in pd.read_html('https://etfdailynews.com/etf/spy/', attrs={'id': 'etfs-that-own'})[0].Symbol.values.tolist() if isinstance(x, str)]\n",
+    "correction = {'PCLN':'BKNG', 'DWDP':'DD'}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os, sys\n",
+    "chart_range = [(5,'break'), (10,'1m'), (45,'3m'), (90,'6m'), (250,'1y'), (99999,'max')]"
    ]
   },
   {
@@ -229,49 +240,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "iex.init(key.test_token, api='sandbox')\n",
-    "# iex.init(key.token, api='cloud')\n",
+    "# iex.init(key.test_token, api='sandbox')\n",
+    "iex.init(key.token, api='cloud')\n",
+    "\n",
+    "# save historical price to disk\n",
     "for k in spy:\n",
-    "    # todo read csv and add needed range\n",
-    "    iex.Stock(k).chart('1y').to_csv(\"./daily/{}.csv\".format(k))"
+    "    if k in correction:\n",
+    "        k = correction[k]\n",
+    "    sys.stdout.write('\\r{}   '.format(k))\n",
+    "    filename = \"./daily/{}.csv\".format(k)\n",
+    "    if os.path.exists(filename):\n",
+    "        # fetcher missing period\n",
+    "        df = pd.read_csv(filename, index_col='date', parse_dates=True)\n",
+    "        td = pd.Timedelta(df.index[-1] - pd.datetime.now())\n",
+    "        for day, param in chart_range:\n",
+    "            if td.days < day:\n",
+    "                if param != 'break':\n",
+    "                    df_append = iex.Stock(k).chart(param)\n",
+    "                    pd.concat([df, df_append]).to_csv(filename)\n",
+    "                break\n",
+    "    else:\n",
+    "        iex.Stock(k).chart('max').to_csv(filename)\n",
+    "    \n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    " "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -283,9 +274,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:fac]",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-env-fac-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
