--- a/IEX Stock Fetcher.ipynb
+++ b/IEX Stock Fetcher.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -91,85 +91,85 @@
        "      <td>0.00</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>0.0000</td>\n",
-       "      <td>230.20</td>\n",
-       "      <td>230.09</td>\n",
+       "      <td>231.48</td>\n",
+       "      <td>234.64</td>\n",
        "      <td>Sep 30</td>\n",
-       "      <td>229.47</td>\n",
-       "      <td>226.80</td>\n",
-       "      <td>228.40</td>\n",
-       "      <td>227.92</td>\n",
-       "      <td>228.85</td>\n",
-       "      <td>229.90</td>\n",
-       "      <td>26841490</td>\n",
-       "      <td>27506584</td>\n",
+       "      <td>221.81</td>\n",
+       "      <td>230.30</td>\n",
+       "      <td>229.26</td>\n",
+       "      <td>228.03</td>\n",
+       "      <td>230.10</td>\n",
+       "      <td>225.40</td>\n",
+       "      <td>26836800</td>\n",
+       "      <td>26634345</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2019-10-01</th>\n",
-       "      <td>0.62</td>\n",
-       "      <td>0.002852</td>\n",
-       "      <td>0.2858</td>\n",
-       "      <td>234.56</td>\n",
-       "      <td>228.73</td>\n",
+       "      <td>0.63</td>\n",
+       "      <td>0.002813</td>\n",
+       "      <td>0.2860</td>\n",
+       "      <td>230.43</td>\n",
+       "      <td>232.22</td>\n",
        "      <td>Oct 1</td>\n",
-       "      <td>234.70</td>\n",
-       "      <td>226.03</td>\n",
-       "      <td>226.30</td>\n",
-       "      <td>237.90</td>\n",
-       "      <td>230.50</td>\n",
-       "      <td>235.12</td>\n",
-       "      <td>37691578</td>\n",
-       "      <td>37906031</td>\n",
+       "      <td>228.40</td>\n",
+       "      <td>231.13</td>\n",
+       "      <td>233.81</td>\n",
+       "      <td>229.73</td>\n",
+       "      <td>226.10</td>\n",
+       "      <td>225.33</td>\n",
+       "      <td>37549879</td>\n",
+       "      <td>36964121</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2019-10-02</th>\n",
-       "      <td>-5.68</td>\n",
-       "      <td>-0.022798</td>\n",
-       "      <td>-2.6024</td>\n",
-       "      <td>219.46</td>\n",
-       "      <td>229.68</td>\n",
+       "      <td>-5.78</td>\n",
+       "      <td>-0.022770</td>\n",
+       "      <td>-2.5135</td>\n",
+       "      <td>228.61</td>\n",
+       "      <td>229.02</td>\n",
        "      <td>Oct 2</td>\n",
-       "      <td>227.08</td>\n",
-       "      <td>223.94</td>\n",
-       "      <td>219.07</td>\n",
-       "      <td>234.70</td>\n",
-       "      <td>223.84</td>\n",
-       "      <td>234.00</td>\n",
-       "      <td>36483928</td>\n",
-       "      <td>36859828</td>\n",
+       "      <td>225.29</td>\n",
+       "      <td>232.71</td>\n",
+       "      <td>224.71</td>\n",
+       "      <td>233.20</td>\n",
+       "      <td>228.66</td>\n",
+       "      <td>232.18</td>\n",
+       "      <td>36373450</td>\n",
+       "      <td>36082815</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2019-10-03</th>\n",
-       "      <td>1.87</td>\n",
-       "      <td>-0.014374</td>\n",
-       "      <td>0.8615</td>\n",
-       "      <td>221.36</td>\n",
-       "      <td>228.88</td>\n",
+       "      <td>1.88</td>\n",
+       "      <td>-0.014334</td>\n",
+       "      <td>0.8665</td>\n",
+       "      <td>231.38</td>\n",
+       "      <td>225.03</td>\n",
        "      <td>Oct 3</td>\n",
-       "      <td>224.74</td>\n",
-       "      <td>226.18</td>\n",
-       "      <td>230.40</td>\n",
-       "      <td>230.14</td>\n",
-       "      <td>217.64</td>\n",
-       "      <td>228.59</td>\n",
-       "      <td>31658842</td>\n",
-       "      <td>30946087</td>\n",
+       "      <td>219.88</td>\n",
+       "      <td>219.20</td>\n",
+       "      <td>224.89</td>\n",
+       "      <td>229.04</td>\n",
+       "      <td>215.48</td>\n",
+       "      <td>222.41</td>\n",
+       "      <td>31733834</td>\n",
+       "      <td>30957763</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2019-10-04</th>\n",
-       "      <td>6.26</td>\n",
-       "      <td>0.013779</td>\n",
-       "      <td>2.8933</td>\n",
-       "      <td>236.36</td>\n",
-       "      <td>234.80</td>\n",
+       "      <td>6.21</td>\n",
+       "      <td>0.014214</td>\n",
+       "      <td>2.9104</td>\n",
+       "      <td>236.71</td>\n",
+       "      <td>230.05</td>\n",
        "      <td>Oct 4</td>\n",
-       "      <td>225.47</td>\n",
-       "      <td>233.62</td>\n",
-       "      <td>229.12</td>\n",
-       "      <td>230.83</td>\n",
-       "      <td>227.00</td>\n",
-       "      <td>229.15</td>\n",
-       "      <td>35594415</td>\n",
-       "      <td>35560415</td>\n",
+       "      <td>231.56</td>\n",
+       "      <td>228.99</td>\n",
+       "      <td>234.99</td>\n",
+       "      <td>230.43</td>\n",
+       "      <td>227.37</td>\n",
+       "      <td>229.44</td>\n",
+       "      <td>35793765</td>\n",
+       "      <td>36380802</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -178,22 +178,22 @@
       "text/plain": [
        "            change  changeOverTime  changePercent   close    high   label  \\\n",
        "date                                                                        \n",
-       "2019-09-30    0.00        0.000000         0.0000  230.20  230.09  Sep 30   \n",
-       "2019-10-01    0.62        0.002852         0.2858  234.56  228.73   Oct 1   \n",
-       "2019-10-02   -5.68       -0.022798        -2.6024  219.46  229.68   Oct 2   \n",
-       "2019-10-03    1.87       -0.014374         0.8615  221.36  228.88   Oct 3   \n",
-       "2019-10-04    6.26        0.013779         2.8933  236.36  234.80   Oct 4   \n",
+       "2019-09-30    0.00        0.000000         0.0000  231.48  234.64  Sep 30   \n",
+       "2019-10-01    0.63        0.002813         0.2860  230.43  232.22   Oct 1   \n",
+       "2019-10-02   -5.78       -0.022770        -2.5135  228.61  229.02   Oct 2   \n",
+       "2019-10-03    1.88       -0.014334         0.8665  231.38  225.03   Oct 3   \n",
+       "2019-10-04    6.21        0.014214         2.9104  236.71  230.05   Oct 4   \n",
        "\n",
        "               low    open  uClose   uHigh    uLow   uOpen   uVolume    volume  \n",
        "date                                                                            \n",
-       "2019-09-30  229.47  226.80  228.40  227.92  228.85  229.90  26841490  27506584  \n",
-       "2019-10-01  234.70  226.03  226.30  237.90  230.50  235.12  37691578  37906031  \n",
-       "2019-10-02  227.08  223.94  219.07  234.70  223.84  234.00  36483928  36859828  \n",
-       "2019-10-03  224.74  226.18  230.40  230.14  217.64  228.59  31658842  30946087  \n",
-       "2019-10-04  225.47  233.62  229.12  230.83  227.00  229.15  35594415  35560415  "
+       "2019-09-30  221.81  230.30  229.26  228.03  230.10  225.40  26836800  26634345  \n",
+       "2019-10-01  228.40  231.13  233.81  229.73  226.10  225.33  37549879  36964121  \n",
+       "2019-10-02  225.29  232.71  224.71  233.20  228.66  232.18  36373450  36082815  \n",
+       "2019-10-03  219.88  219.20  224.89  229.04  215.48  222.41  31733834  30957763  \n",
+       "2019-10-04  231.56  228.99  234.99  230.43  227.37  229.44  35793765  36380802  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -204,6 +204,111 @@
     "iex.init(key.test_token, api='sandbox')\n",
     "aapl = iex.Stock('AAPL')\n",
     "aapl.chart('5d')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>change</th>\n",
+       "      <th>changeOverTime</th>\n",
+       "      <th>changePercent</th>\n",
+       "      <th>close</th>\n",
+       "      <th>volume</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>date</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2019-09-30</th>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.0000</td>\n",
+       "      <td>232.70</td>\n",
+       "      <td>27406280</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-10-01</th>\n",
+       "      <td>0.64</td>\n",
+       "      <td>0.002789</td>\n",
+       "      <td>0.2904</td>\n",
+       "      <td>234.61</td>\n",
+       "      <td>37247422</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-10-02</th>\n",
+       "      <td>-5.82</td>\n",
+       "      <td>-0.023449</td>\n",
+       "      <td>-2.6087</td>\n",
+       "      <td>223.08</td>\n",
+       "      <td>36111255</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-10-03</th>\n",
+       "      <td>1.90</td>\n",
+       "      <td>-0.014263</td>\n",
+       "      <td>0.8565</td>\n",
+       "      <td>231.56</td>\n",
+       "      <td>31266500</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-10-04</th>\n",
+       "      <td>6.28</td>\n",
+       "      <td>0.013826</td>\n",
+       "      <td>2.8464</td>\n",
+       "      <td>228.54</td>\n",
+       "      <td>36016338</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            change  changeOverTime  changePercent   close    volume\n",
+       "date                                                               \n",
+       "2019-09-30    0.00        0.000000         0.0000  232.70  27406280\n",
+       "2019-10-01    0.64        0.002789         0.2904  234.61  37247422\n",
+       "2019-10-02   -5.82       -0.023449        -2.6087  223.08  36111255\n",
+       "2019-10-03    1.90       -0.014263         0.8565  231.56  31266500\n",
+       "2019-10-04    6.28        0.013826         2.8464  228.54  36016338"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "aapl.chart('5d', chartCloseOnly=True)"
    ]
   },
   {
