fetcher range improve

--- a/IEX Stock Fetcher.ipynb
+++ b/IEX Stock Fetcher.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -56,15 +56,6 @@
        "      <th>changeOverTime</th>\n",
        "      <th>changePercent</th>\n",
        "      <th>close</th>\n",
-       "      <th>high</th>\n",
-       "      <th>label</th>\n",
-       "      <th>low</th>\n",
-       "      <th>open</th>\n",
-       "      <th>uClose</th>\n",
-       "      <th>uHigh</th>\n",
-       "      <th>uLow</th>\n",
-       "      <th>uOpen</th>\n",
-       "      <th>uVolume</th>\n",
        "      <th>volume</th>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -74,126 +65,64 @@
        "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>2019-09-30</th>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.0000</td>\n",
-       "      <td>231.48</td>\n",
-       "      <td>234.64</td>\n",
-       "      <td>Sep 30</td>\n",
-       "      <td>221.81</td>\n",
-       "      <td>230.30</td>\n",
-       "      <td>229.26</td>\n",
-       "      <td>228.03</td>\n",
-       "      <td>230.10</td>\n",
-       "      <td>225.40</td>\n",
-       "      <td>26836800</td>\n",
-       "      <td>26634345</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>2019-10-01</th>\n",
-       "      <td>0.63</td>\n",
-       "      <td>0.002813</td>\n",
-       "      <td>0.2860</td>\n",
-       "      <td>230.43</td>\n",
-       "      <td>232.22</td>\n",
-       "      <td>Oct 1</td>\n",
-       "      <td>228.40</td>\n",
-       "      <td>231.13</td>\n",
-       "      <td>233.81</td>\n",
-       "      <td>229.73</td>\n",
-       "      <td>226.10</td>\n",
-       "      <td>225.33</td>\n",
-       "      <td>37549879</td>\n",
-       "      <td>36964121</td>\n",
+       "      <td>0.630000</td>\n",
+       "      <td>0.002846</td>\n",
+       "      <td>0.2776</td>\n",
+       "      <td>235.08</td>\n",
+       "      <td>36626895</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2019-10-02</th>\n",
-       "      <td>-5.78</td>\n",
-       "      <td>-0.022770</td>\n",
-       "      <td>-2.5135</td>\n",
-       "      <td>228.61</td>\n",
-       "      <td>229.02</td>\n",
-       "      <td>Oct 2</td>\n",
-       "      <td>225.29</td>\n",
-       "      <td>232.71</td>\n",
-       "      <td>224.71</td>\n",
-       "      <td>233.20</td>\n",
-       "      <td>228.66</td>\n",
-       "      <td>232.18</td>\n",
-       "      <td>36373450</td>\n",
-       "      <td>36082815</td>\n",
+       "      <td>-5.740000</td>\n",
+       "      <td>-0.023081</td>\n",
+       "      <td>-2.5109</td>\n",
+       "      <td>222.51</td>\n",
+       "      <td>35941685</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2019-10-03</th>\n",
-       "      <td>1.88</td>\n",
-       "      <td>-0.014334</td>\n",
-       "      <td>0.8665</td>\n",
-       "      <td>231.38</td>\n",
-       "      <td>225.03</td>\n",
-       "      <td>Oct 3</td>\n",
-       "      <td>219.88</td>\n",
-       "      <td>219.20</td>\n",
-       "      <td>224.89</td>\n",
-       "      <td>229.04</td>\n",
-       "      <td>215.48</td>\n",
-       "      <td>222.41</td>\n",
-       "      <td>31733834</td>\n",
-       "      <td>30957763</td>\n",
+       "      <td>1.940000</td>\n",
+       "      <td>-0.014185</td>\n",
+       "      <td>0.8914</td>\n",
+       "      <td>231.78</td>\n",
+       "      <td>30438546</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2019-10-04</th>\n",
-       "      <td>6.21</td>\n",
-       "      <td>0.014214</td>\n",
-       "      <td>2.9104</td>\n",
-       "      <td>236.71</td>\n",
-       "      <td>230.05</td>\n",
-       "      <td>Oct 4</td>\n",
-       "      <td>231.56</td>\n",
-       "      <td>228.99</td>\n",
-       "      <td>234.99</td>\n",
-       "      <td>230.43</td>\n",
-       "      <td>227.37</td>\n",
-       "      <td>229.44</td>\n",
-       "      <td>35793765</td>\n",
-       "      <td>36380802</td>\n",
+       "      <td>6.310000</td>\n",
+       "      <td>0.013995</td>\n",
+       "      <td>2.8347</td>\n",
+       "      <td>230.24</td>\n",
+       "      <td>34995248</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-10-07</th>\n",
+       "      <td>0.051249</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.0200</td>\n",
+       "      <td>234.46</td>\n",
+       "      <td>32130948</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "            change  changeOverTime  changePercent   close    high   label  \\\n",
-       "date                                                                        \n",
-       "2019-09-30    0.00        0.000000         0.0000  231.48  234.64  Sep 30   \n",
-       "2019-10-01    0.63        0.002813         0.2860  230.43  232.22   Oct 1   \n",
-       "2019-10-02   -5.78       -0.022770        -2.5135  228.61  229.02   Oct 2   \n",
-       "2019-10-03    1.88       -0.014334         0.8665  231.38  225.03   Oct 3   \n",
-       "2019-10-04    6.21        0.014214         2.9104  236.71  230.05   Oct 4   \n",
-       "\n",
-       "               low    open  uClose   uHigh    uLow   uOpen   uVolume    volume  \n",
-       "date                                                                            \n",
-       "2019-09-30  221.81  230.30  229.26  228.03  230.10  225.40  26836800  26634345  \n",
-       "2019-10-01  228.40  231.13  233.81  229.73  226.10  225.33  37549879  36964121  \n",
-       "2019-10-02  225.29  232.71  224.71  233.20  228.66  232.18  36373450  36082815  \n",
-       "2019-10-03  219.88  219.20  224.89  229.04  215.48  222.41  31733834  30957763  \n",
-       "2019-10-04  231.56  228.99  234.99  230.43  227.37  229.44  35793765  36380802  "
+       "              change  changeOverTime  changePercent   close    volume\n",
+       "date                                                                 \n",
+       "2019-10-01  0.630000        0.002846         0.2776  235.08  36626895\n",
+       "2019-10-02 -5.740000       -0.023081        -2.5109  222.51  35941685\n",
+       "2019-10-03  1.940000       -0.014185         0.8914  231.78  30438546\n",
+       "2019-10-04  6.310000        0.013995         2.8347  230.24  34995248\n",
+       "2019-10-07  0.051249        0.000000         0.0200  234.46  32130948"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -203,12 +132,12 @@
     "import key\n",
     "iex.init(key.test_token, api='sandbox')\n",
     "aapl = iex.Stock('AAPL')\n",
-    "aapl.chart('5d')"
+    "aapl.chart('5d', chartCloseOnly=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -232,14 +161,22 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>change</th>\n",
-       "      <th>changeOverTime</th>\n",
-       "      <th>changePercent</th>\n",
-       "      <th>close</th>\n",
-       "      <th>volume</th>\n",
+       "      <th>amount</th>\n",
+       "      <th>currency</th>\n",
+       "      <th>date</th>\n",
+       "      <th>declaredDate</th>\n",
+       "      <th>description</th>\n",
+       "      <th>flag</th>\n",
+       "      <th>frequency</th>\n",
+       "      <th>paymentDate</th>\n",
+       "      <th>recordDate</th>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>date</th>\n",
+       "      <th>exDate</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
@@ -249,66 +186,42 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>2019-09-30</th>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.0000</td>\n",
-       "      <td>232.70</td>\n",
-       "      <td>27406280</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2019-10-01</th>\n",
-       "      <td>0.64</td>\n",
-       "      <td>0.002789</td>\n",
-       "      <td>0.2904</td>\n",
-       "      <td>234.61</td>\n",
-       "      <td>37247422</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2019-10-02</th>\n",
-       "      <td>-5.82</td>\n",
-       "      <td>-0.023449</td>\n",
-       "      <td>-2.6087</td>\n",
-       "      <td>223.08</td>\n",
-       "      <td>36111255</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2019-10-03</th>\n",
-       "      <td>1.90</td>\n",
-       "      <td>-0.014263</td>\n",
-       "      <td>0.8565</td>\n",
-       "      <td>231.56</td>\n",
-       "      <td>31266500</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2019-10-04</th>\n",
-       "      <td>6.28</td>\n",
-       "      <td>0.013826</td>\n",
-       "      <td>2.8464</td>\n",
-       "      <td>228.54</td>\n",
-       "      <td>36016338</td>\n",
+       "      <th>2018-11-14</th>\n",
+       "      <td>0.74</td>\n",
+       "      <td>USD</td>\n",
+       "      <td>2019-10-08</td>\n",
+       "      <td>2018-11-10</td>\n",
+       "      <td>er eD lrpfpl$esAa7reP a udDiv. h3 areSeeydicr ...</td>\n",
+       "      <td>QhneQoNCao g</td>\n",
+       "      <td>reayurltQ</td>\n",
+       "      <td>2018-11-29</td>\n",
+       "      <td>2018-11-14</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "            change  changeOverTime  changePercent   close    volume\n",
-       "date                                                               \n",
-       "2019-09-30    0.00        0.000000         0.0000  232.70  27406280\n",
-       "2019-10-01    0.64        0.002789         0.2904  234.61  37247422\n",
-       "2019-10-02   -5.82       -0.023449        -2.6087  223.08  36111255\n",
-       "2019-10-03    1.90       -0.014263         0.8565  231.56  31266500\n",
-       "2019-10-04    6.28        0.013826         2.8464  228.54  36016338"
+       "            amount currency       date declaredDate  \\\n",
+       "exDate                                                \n",
+       "2018-11-14    0.74      USD 2019-10-08   2018-11-10   \n",
+       "\n",
+       "                                                  description           flag  \\\n",
+       "exDate                                                                         \n",
+       "2018-11-14  er eD lrpfpl$esAa7reP a udDiv. h3 areSeeydicr ...  QhneQoNCao g    \n",
+       "\n",
+       "            frequency paymentDate  recordDate  \n",
+       "exDate                                         \n",
+       "2018-11-14  reayurltQ  2018-11-29  2018-11-14  "
       ]
      },
-     "execution_count": 44,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "aapl.chart('5d', chartCloseOnly=True)"
+    "aapl.dividends('1y')"
    ]
   },
   {
@@ -320,23 +233,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "spy = [x for x in pd.read_html('https://etfdailynews.com/etf/spy/', attrs={'id': 'etfs-that-own'})[0].Symbol.values.tolist() if isinstance(x, str)]\n",
+    "spy = [x for x in pd.read_html('https://etfdailynews.com/etf/spy/', attrs={'id': 'etfs-that-own'})[0].Symbol.values.tolist() \n",
+    "       if isinstance(x, str)]\n",
     "correction = {'PCLN':'BKNG', 'DWDP':'DD'}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "import os, sys\n",
-    "chart_range = [(5,'break'), (10,'1m'), (45,'3m'), (90,'6m'), (250,'1y'), (99999,'max')]"
+    "chart_range = [(5,'5d'), (20,'1m'), (75,'3m'), (165,'6m'), (341,'1y'), (715,'2y'), (99999,'max')]"
    ]
   },
   {
@@ -350,24 +264,32 @@
     "\n",
     "# save historical price to disk\n",
     "for k in spy:\n",
-    "    if k in correction:\n",
-    "        k = correction[k]\n",
+    "    k = correction[k] if k in correction else k\n",
     "    sys.stdout.write('\\r{}   '.format(k))\n",
     "    filename = \"./daily/{}.csv\".format(k)\n",
     "    if os.path.exists(filename):\n",
     "        # fetcher missing period\n",
     "        df = pd.read_csv(filename, index_col='date', parse_dates=True)\n",
-    "        td = pd.Timedelta(df.index[-1] - pd.datetime.now())\n",
+    "        days = pd.Timedelta(df.index[-1] - pd.datetime.now()).days\n",
+    "        bdays = len(pd.bdate_range(df.index[-1], pd.datetime.now())) - 1\n",
     "        for day, param in chart_range:\n",
-    "            if td.days < day:\n",
-    "                if param != 'break':\n",
-    "                    df_append = iex.Stock(k).chart(param)\n",
-    "                    pd.concat([df, df_append]).to_csv(filename)\n",
+    "            if bdays <= 0:\n",
+    "                break\n",
+    "            elif days < day:\n",
+    "                df_append = iex.Stock(k).chart(param)\n",
+    "                pd.concat([df, df_append]).to_csv(filename)\n",
     "                break\n",
     "    else:\n",
     "        iex.Stock(k).chart('max').to_csv(filename)\n",
     "    \n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
